--- a/_config.yml
+++ b/_config.yml
@@ -1,78 +1,91 @@
-# Hexo Configuration
-## Docs: http://hexo.io/docs/configuration.html
-## Source: https://github.com/hexojs/hexo/
+# when running hexo in a subdirectory (e.g. domain.tld/blog), remove leading slashes ( "/archives" -> "archives" )
+menu:
+  home: /blog
+  about: http://www.strikingly.com/s/careers/?utm_source=tech_blog
+  strikingly: https://www.strikingly.com/?utm_source=tech_blog
+  # archives: /archives
+  # tags: /tags
+  #commonweal: /404.html
 
-# Site
-title: Strikingly Tech
-subtitle: Thoughts and learnings from buliding Strikingly.com
-description:
-author: Strikingly
-language: en
-timezone: Asia/Shanghai
+# Social links
+social:
+  github: https://github.com/strikingly
+  twitter: https://twitter.com/strikingly
+  facebook: https://www.facebook.com/strikingly
 
-# URL
-## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://strikingly.github.io/blog
-root: /blog/
-permalink: :year/:month/:day/:title/
-permalink_defaults:
-homepage_url: https://www.strikingly.com/?utm_source=tech_blog
+# Place your favicon.ico to /source directory.
+favicon: /favicon.ico
+avatar:
+# Set default keywords (Use a comma to separate)
+keywords: "Strikingly,Ruby,React.js,YC,startup,shanghai"
 
-# Directory
-source_dir: source
-public_dir: public
-tag_dir: tags
-archive_dir: archives
-category_dir: categories
-code_dir: downloads/code
-i18n_dir: :lang
-skip_render:
+# Set rss to false to disable feed link.
+# Leave rss as empty to use site's feed link.
+# Set rss to specific value if you have burned your feed already.
+rss:
 
-# Writing
-new_post_name: :title.md # File name of new posts
-default_layout: post
-titlecase: false # Transform title into titlecase
-external_link: true # Open external links in new tab
-filename_case: 0
-render_drafts: false
-post_asset_folder: true
-relative_link: false
-future: true
-highlight:
-  enable: true
-  line_number: true
-  auto_detect: true
-  tab_replace:
+# Icon fonts
+# Place your font into next/source/fonts, specify directory-name and font-name here
+# Avialable: default | linecons | fifty-shades | feather
+icon_font: default
+#icon_font: fifty-shades
+#icon_font: feather
+#icon_font: linecons
 
-# Category & Tag
-default_category: uncategorized
-category_map:
-tag_map:
+# Code Highlight theme
+# Available value: normal | night | night eighties | night blue | night bright
+# https://github.com/chriskempson/tomorrow-theme
+highlight_theme: night
 
-# Date / Time format
-## Hexo uses Moment.js to parse and display date
-## You can customize the date format as defined in
-## http://momentjs.com/docs/#/displaying/format/
-date_format: YYYY-MM-DD
-time_format: HH:mm:ss
 
-# Pagination
-## Set per_page to 0 to disable pagination
-per_page: 10
-pagination_dir: page
+# MathJax Support
+mathjax:
 
-# Extensions
-## Plugins: http://hexo.io/plugins/
-## Themes: http://hexo.io/themes/
-theme: next
 
-# Deployment
-## Docs: http://hexo.io/docs/deployment.html
-deploy:
-  type: git
-  repository: https://github.com/strikingly/blog.git
-  branch: gh-pages
+# Schemes
+scheme: Mist
 
-# Analytics
-google_analytics: UA-25124444-9
-disqus_shortname: strikinglytech
+
+# Sidebar, available value:
+#  - post    expand on posts automatically. Default.
+#  - always  expand for all pages automatically
+#  - hide    expand only when click on the sidebar toggle icon.
+sidebar: post
+#sidebar: always
+#sidebar: hide
+
+
+# Automatically scroll page to section which is under <!-- more --> mark.
+scroll_to_more: true
+
+
+# Automatically add list number to toc.
+toc_list_number: true
+
+# Automatically Excerpt
+auto_excerpt:
+  enable: false
+  length: 150
+
+# Use Lato font
+# Note: this option is avialable only when the language is not `zh-Hans`
+use_font_lato: true
+
+
+## DO NOT EDIT THE FOLLOWING SETTINGS
+## UNLESS YOU KNOW WHAT YOU ARE DOING
+
+# Use velocity to animate everything.
+use_motion: true
+
+# Fancybox
+fancybox: true
+
+# Static files
+vendors: vendors
+css: css
+js: js
+images: images
+
+# Theme version
+version: 0.4.4
